[OING-173] feat: MVP 2차 추억 캘린더 배너 구현 (#132)
* feat: Add familyScore definition

* feat: Add JpaEntity and SpringEvent to add score per user activity

* feat: Add the events to substract score per canceled user activity

* fix: Change FamilyScoreEventListener annotation to fix not committed score event

* feat: Impl the code to calculate the familyTopPercentage in getBanner API

* feat: Impl the code to count family activity in getBanner API

* feat: Add counting code to banners dynamic fields(allFamilyMembersUploadedDays, allFamilyMembersUploadedStreaks) and Impl getBanner API with a lot of comments

* fix: Fix broken test code with changed Member entity

* fix: Handle divide by zero error from calculateFamilyTopPercentile method

* fix: Replace inclusiveToday as endDate from the code to calculate dynamic field of getBanner API to fix wrongly selected period

* chore: Clear the commenting at redis cache annotation in MemberPostController